<resources>
    <string name="app_name">Diary</string>
    <string name="api_base_url">https://reqres.in/</string>
    <string name="new_diary">New Diary</string>
    <string name="add_to_site_diary">Add to site diary</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_photos_to_site_diary">Add Photos to site diary</string>
    <string name="comments">Comments</string>
    <string name="include_in_photo_gallery">Include in photo Gallery</string>
    <string name="details">Details</string>
    <string name="select_area">Select Area</string>
    <string name="task_category">Task Category</string>
    <string name="link_to_existing_event">Link to existing event?</string>
    <string name="tags">Tags</string>
    <string name="select_event">Select Event</string>
    <string name="date">Date</string>
    <string name="philippines">Philippines</string>

    <string-array name="areas">
        <item>Cebu</item>
        <item>Davao</item>
        <item>Pasig</item>
    </string-array>

    <string-array name="categories">
        <item>Work</item>
        <item>Home</item>
        <item>Vacation</item>
    </string-array>
</resources>