<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".DiaryActivity">

    <include
        android:id="@+id/diaryToolBar"
        layout="@layout/layout_tool_bar_close" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtLocation"
        style="@style/Widget.AppCompat.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_9sdp"
        android:paddingEnd="@dimen/_9sdp"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        tools:text="@tools:sample/cities" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">

                <TextView
                    style="@style/TextAppearance.Material3.HeadlineSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:text="@string/add_to_site_diary" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:background="@color/dark_grey"
                    app:round="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_baseline_question_mark_24"
                    app:tint="@color/background_color" />

            </RelativeLayout>

            <!--Add Photos to site diary-->
            <androidx.cardview.widget.CardView
                style="@style/CardView.FormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/add_photos_to_site_diary"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:background="@color/background_color" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerVPhotosToDiary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="4"
                        tools:itemCount="5"
                        tools:listitem="@layout/layout_photos_item" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAddPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/add_a_photo"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:text="@string/include_in_photo_gallery" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/checkboxIncludeInGallery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            tools:checked="true" />
                    </RelativeLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_10sdp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Comments-->
            <androidx.cardview.widget.CardView
                style="@style/CardView.FormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/comments"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:background="@color/background_color" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutComments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        app:boxBackgroundColor="@null">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/comments"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_10sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--Details-->
            <androidx.cardview.widget.CardView
                style="@style/CardView.FormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/details"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:background="@color/background_color" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tIDateDetails"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        app:boxBackgroundColor="@null">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/aCDateDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            android:focusable="false"
                            android:inputType="none"
                            android:hint="2020-06-29"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tIArea"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        app:boxBackgroundColor="@null">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/aCArea"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="false"
                            android:hint="@string/select_area"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tITaskCategory"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        app:boxBackgroundColor="@null">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/aCTaskCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="false"
                            android:hint="@string/task_category"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tITags"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        app:boxBackgroundColor="@null">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/aCTags"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="false"
                            android:hint="@string/tags"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_10sdp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--Link to existing Event?-->
            <androidx.cardview.widget.CardView
                style="@style/CardView.FormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:text="@string/link_to_existing_event"
                            android:textStyle="bold" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/checkboxLinkToEvent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:background="@color/background_color" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tISelectEvent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:visibility="gone"
                        app:boxBackgroundColor="@null"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/aCSelectEvent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="false"
                            android:hint="@string/select_event"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_10sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_10sdp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
